ex/ex1.err
$ python ex/ex1.py 
  File "ex/ex1.py", line 3
    print "I like typing this.
                             ^
SyntaxError: EOL while scanning string literal

